[tool.poetry]
name = "industryDocumentsWrapper"
version = "0.1.0"
description = "A simple python wrapper for the UCSF Industry Documents API."
authors = ["Rolando Rodriguez <rolando@ad.unc.edu"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.14.0"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest="^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
